[project]
name = "livellm-browser"
version = "0.1.0"
description = "Browser in docker with remote controll"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    "duckduckgo-search>=6.1.0",
    "patchright>=1.56.0"
]
