[project]
name = "livellm-browser"
version = "1.1.1"
description = "Browser in docker with remote controll"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    "patchright>=1.56.0",
    "openai>=2.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
